# reCaptcha-Solver

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  dataset.py  model.py  pyproject.toml  train.py
utils/: augmentation.py  prepare_dataset.py
