[tool.poetry]
name = 'reCaptcha Solver'
version = '1.0.1'
description = 'reCaptcha Solver'
authors = ['hoanshiro <hoanshiro@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.10'

[tool.poetry.group.dev.dependencies]
pre-commit = '2.21.0'
black = '23.3.0'
flake8 = '6.0.0'
pyright = '1.1.302'
ruff = '0.0.261'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.toml
  | \.yml
  | \.sh
  | Dockerfile
)/
'''
skip-string-normalization = true

[tool.pyright]
pythonVersion = '3.10'
pythonPlatform = 'Linux'

[tool.ruff]
ignore = [
    'E501',
    'W605',
]
select = [
    'E',
    'F',
    'W',
    'I',
]
[tool.ruff.isort]
combine-as-imports = true
